--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Want to check out my source code?  No problem!  Feel free to comment or provide 
         <div class="container">
             <h1 id="intro-name">Wonder Gift</h1>
             <div class="line-separator"></div>
-            <p>Technology Enthusiast <span class="dot"><i class="fa fa-circle"></i></span> Perfectionist <span class="dot"><i class="fa fa-circle"></i></span> Animal Lover</p>
+            <p>It is only in giving that we shall receive.<br>Wonders start here. One gift at a time.</p>
             <ul id="social-btns">
                 <li class="resume glow"><a class="resume-linkedin-glow" href="./files/timothy_tong.pdf"><i class="fa fa-list-ul"></i></a></li>
                 <li class="github"><a class="github-glow" href="https://github.com/timothytong"><i class="fa fa-github"></i></a></li>
