--- a/index.html
+++ b/index.html
@@ -95,12 +95,9 @@ Want to check out my source code?  No problem!  Feel free to comment or provide 
         <div class="container">
             <h1 id="intro-name">Wonder Gift</h1>
             <div class="line-separator"></div>
+            <div class="slogan">
             <p>Wonders start here. One gift at a time.</p>
-            <ul id="social-btns">
-                <li class="resume glow"><a class="resume-linkedin-glow" href="./files/timothy_tong.pdf"><i class="fa fa-list-ul"></i></a></li>
-                <li class="github"><a class="github-glow" href="https://github.com/timothytong"><i class="fa fa-github"></i></a></li>
-                <li class="linkedin glow"><a class="resume-linkedin-glow" href="http://ca.linkedin.com/in/kyttong"><i class="fa fa-linkedin"></i></a></li>
-            </ul>
+        </div>
         </div>
         <h4 id="scrl-dwn-btn"><i class="fa fa-2x fa-angle-double-down"></i></h4>
     </div>
