--- a/index.html
+++ b/index.html
@@ -96,7 +96,33 @@ Want to check out my source code?  No problem!  Feel free to comment or provide 
             <h1 id="intro-name">Wonder Gift</h1>
             <div class="line-separator"></div>
             <div class="slogan">
-            <p>Wonders start here. One gift at a time.</p>
+            <p style="margin-bottom:50px">Wonders start here. One gift at a time.</p>
+        </div>
+            <section class="demo-3" style="padding-top:0px">
+                <div class="box" style="margin:4px; z-index:3">
+                    <a class="scroll" href="#_about" style="text-decoration:none; color:rgba(255,255,255,0.7);">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
+                            <line class="top" x1="0" y1="0" x2="360" y2="0"></line>
+                            <line class="left" x1="0" y1="50" x2="0" y2="-100"></line>
+                            <line class="bottom" x1="130" y1="50" x2="-240" y2="50"></line>
+                            <line class="right" x1="130" y1="0" x2="130" y2="150"></line>
+                        </svg>
+                        <h5>LOG IN</h5>
+                    </a>
+                </div>
+                <div class="box" style="margin:4px;z-index:3">
+                    <a href="#_portfolio" style="text-decoration:none; color:rgba(255,255,255,0.7);">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
+                            <line class="top" x1="0" y1="0" x2="360" y2="0"></line>
+                            <line class="left" x1="0" y1="50" x2="0" y2="-100"></line>
+                            <line class="bottom" x1="130" y1="50" x2="-240" y2="50"></line>
+                            <line class="right" x1="130" y1="0" x2="130" y2="150"></line>
+                        </svg>
+                        <h5>SIGN UP</h5>
+                    </a>
+
+                </div>
+            </section>
         </div>
         </div>
         <h4 id="scrl-dwn-btn"><i class="fa fa-2x fa-angle-double-down"></i></h4>
