--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ Want to check out my source code?  No problem!  Feel free to comment or provide 
 -->
 
 <html>
-    <title>KYT | Home</title>
+    <title>Wonder Gift</title>
     <meta charset="UTF-8">
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -92,12 +92,13 @@ Want to check out my source code?  No problem!  Feel free to comment or provide 
     </header>
     
     <div id="intro" style="background-color:rgba(0,0,0,0.5)">
+        <div><img src="./images/ribbon/ribbon_1.png" style="height:150px"></div>
         <div class="container">
             <h1 id="intro-name">Wonder Gift</h1>
             <div class="line-separator"></div>
             <div class="slogan">
             <p style="margin-bottom:50px">Wonders start here. One gift at a time.</p>
-        </div>
+            </div>
             <section class="demo-3" style="padding-top:0px">
                 <div class="box" style="margin:4px; z-index:3">
                     <a class="scroll" href="#_about" style="text-decoration:none; color:rgba(255,255,255,0.7);">
@@ -123,7 +124,6 @@ Want to check out my source code?  No problem!  Feel free to comment or provide 
 
                 </div>
             </section>
-        </div>
         </div>
         <h4 id="scrl-dwn-btn"><i class="fa fa-2x fa-angle-double-down"></i></h4>
     </div>
