--- a/dash/dashboard.html
+++ b/dash/dashboard.html
@@ -11,39 +11,45 @@
 
 </head>
 
-<body>
+<body class = "dashboard">
+	<div id = "wrap">
+		<div id = "main">
 
-	<div class = "jumbotron">
+			<div class = "jumbotron">
 
-		 <img id = "imagee" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTuwFBSBW6bHZiIfyiJwJv8HToVR8jq1C2rUfIpQq6xcXmJrprrMQ" class="img-circle" alt="UserPicture" width="200" height="200">
+				 <img id = "imagee" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTuwFBSBW6bHZiIfyiJwJv8HToVR8jq1C2rUfIpQq6xcXmJrprrMQ" class="img-circle" alt="UserPicture" width="200" height="200">
 
-		<div class = "main_info">
-			<div id = "profile_name">
-				///UserName
+				<div class = "main_info">
+					<div id = "profile_name">
+						PurpleSauce
+					</div>
+
+					<p class = "info_font">
+						Karma Points: <span class= "accent_text">60 <br>
+						F </span>
+					</p>
+
+				</div>
+
 			</div>
 
-			<p class = "info_font">
-				Karma Points: blank <br>
-				F
-			</p>
-
-		</div>
-
-	</div>
-
-	<div class = "container" style="background-color:">
-		<div class="option_button_blocks">
-			<div class = "button-extra">
-			<button type="button" class="btn btn-primary"> Start Gift Giving </button>
+				<div class="option_button_blocks">
+					<div class = "button-extra">
+					<button type="button" class="btn btn-primary"> Start Gift Giving </button>
+					</div>
+				</div>
+				<div class="option_button_blocks"> </div>
+				<div class="option_button_blocks">
+					<div class = "button-extra2">
+						<button type="button" class="btn btn-primary"> Start A Trade </button>
+					</div>
+				</div>
 			</div>
 		</div>
-		<div class="option_button_blocks"> </div>
-		<div class="option_button_blocks">
-			<div class = "button-extra2">
-				<button type="button" class="btn btn-primary"> Start A Trade </button>
-			</div>
+	
+		<div class = "bottombar" >
+		
 		</div>
-	</div>
 
 
 </body>
