Added dynamic button functionality and styling

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Want to check out my source code?  No problem!  Feel free to comment or provide 
     </header>
     
     <div id="intro" style="background-color:rgba(0,0,0,0.5)">
-        <div><img src="./images/ribbon/ribbon_1.png" style="height:150px"></div>
+        <div><img src="./images/ribbon/ribbon_4.png" style="height:130px"></div>
         <div class="container">
             <h1 id="intro-name">Wonder Gift</h1>
             <div class="line-separator"></div>
@@ -100,8 +100,8 @@ Want to check out my source code?  No problem!  Feel free to comment or provide 
             <p style="margin-bottom:50px">Wonders start here. One gift at a time.</p>
             </div>
             <section class="demo-3" style="padding-top:0px">
-                <div class="box" style="margin:4px; z-index:3">
-                    <a class="scroll" href="#_about" style="text-decoration:none; color:rgba(255,255,255,0.7);">
+                <div class="box" id="login" style="margin:4px; z-index:3;">
+                    <a class="scroll" href="#_about" style="text-decoration:none; color:rgba(255,255,255,0.7)">
                         <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
                             <line class="top" x1="0" y1="0" x2="360" y2="0"></line>
                             <line class="left" x1="0" y1="50" x2="0" y2="-100"></line>
@@ -111,7 +111,7 @@ Want to check out my source code?  No problem!  Feel free to comment or provide 
                         <h5>LOG IN</h5>
                     </a>
                 </div>
-                <div class="box" style="margin:4px;z-index:3">
+                <div class="box" id="signup" style="margin:4px;z-index:3">
                     <a href="#_portfolio" style="text-decoration:none; color:rgba(255,255,255,0.7);">
                         <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
                             <line class="top" x1="0" y1="0" x2="360" y2="0"></line>
