--- a/dash/dashboard.html
+++ b/dash/dashboard.html
@@ -20,7 +20,7 @@
 				 <img id = "imagee" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTuwFBSBW6bHZiIfyiJwJv8HToVR8jq1C2rUfIpQq6xcXmJrprrMQ" class="img-circle" alt="UserPicture" width="200" height="200">
 
 				<div class = "main_info">
-					<div id = "profile_name">
+					<div id = "profile_name2">
 						PurpleSauce
 					</div>
 
