Minor styling changes. Chrome compatible now

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Want to check out my source code?  No problem!  Feel free to comment or provide 
         </nav>
     </header>
     
-    <div id="intro" style="background-color:rgba(0,0,0,0.5)">
+    <div id="intro">
         <div><img src="./images/ribbon/ribbon_4.png" style="height:130px"></div>
         <div class="container">
             <h1 id="intro-name">Wonder Gift</h1>
