Logo added and styled

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ Want to check out my source code?  No problem!  Feel free to comment or provide 
             <div class="slogan">
             <p style="margin-bottom:50px">Wonders start here. One gift at a time.</p>
             </div>
+            <div style="display:block;margin:auto;width:100px;margin-bottom:40px"><img src="./images/logo/white-logo-3.png" style="height:100px"></div>
             <section class="demo-3" style="padding-top:0px">
                 <div class="box" id="login" style="margin:4px; z-index:3;">
                     <a class="scroll" href="#_about" style="text-decoration:none; color:rgba(255,255,255,0.7)">
