--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Want to check out my source code?  No problem!  Feel free to comment or provide 
     <header id='top'>
         <nav class="navigation">
             <div id='initial-and-name'>
-                <h1><a href="#top" class="back-to-top">KYT</a><span class="name">TIMOTHY <span class="bold">TONG</span></span></h1>
+                <h1 style="font-size:27px"><a href="#top" class="back-to-top"><img class="nav-logo" src="./images/logo/white-logo-3.png" style="height:50px"></a><span class="name">WONDER <span class="bold">GIFT</span></span></h1>
             </div>
             <span id="menu-icon"><i class="fa fa-list-ul"></i></span>
             <div id='sections'>
@@ -101,7 +101,6 @@ Want to check out my source code?  No problem!  Feel free to comment or provide 
             <div class="slogan">
             <p style="margin-bottom:50px">Wonders start here. One gift at a time.</p>
             </div>
-            <div style="display:block;margin:auto;width:100px;margin-bottom:40px"><img src="./images/logo/white-logo-3.png" style="height:100px"></div>
             <section class="demo-3" style="padding-top:0px">
                 <div class="box" id="login" style="margin:4px; z-index:3;">
                     <a class="scroll" href="#_about" style="text-decoration:none; color:rgba(255,255,255,0.7)">
@@ -124,9 +123,9 @@ Want to check out my source code?  No problem!  Feel free to comment or provide 
                         </svg>
                         <h5>SIGN UP</h5>
                     </a>
-
                 </div>
             </section>
+                <div id ="logo-main" style="display:block;margin:auto;width:85px;margin-top:60px"><img src="./images/logo/white-logo-3.png" style="height:80px"></div>
         </div>
         <h4 id="scrl-dwn-btn"><i class="fa fa-2x fa-angle-double-down"></i></h4>
     </div>
